# Proxigo_Scalence

./: .gitignore  QUICK_FIX_SENSORS.md  QUICK_START.md  README.md  README_QGC_AUTOCONNECT.md  README_QUICK_START.md  README_SIMULATION.md  docker-compose.dev.yml  docker-compose.sitl.yml  docker-compose.yml
config/camera/: arducam_imx477.yaml  (+3 more)
docs/: ARCHITECTURE.md  AUTO_CONNECT_QGC.md  CALIBRATION_GUIDE.md  DOCKER_ARCHITECTURE.md  FIXED_WING_VTOL_SETUP.md  FIX_DRONE_FLYING_GLITCH.md  FIX_HOME_POSITION.md  FIX_VEHICLE_POSITION.md  MISSION_UPLOAD_TROUBLESHOOTING.md  PX4_SITL_3D_VISUALIZATION.md  QGC_AUTO_CONNECT_SETUP.md  QGC_CONNECTION_TROUBLESHOOTING.md  QUICKSTART_SIMULATION.md  ROBUST_SIMULATION_OPTIONS.md  SENSOR_CALIBRATION.md  SIMPLE_MISSION.md  SIMULATION_MODES.md  SIMULATION_SETUP.md  VIO_SATELLITE_DESIGN.md  VPS_MODULE_ROADMAP.md
gazebo_worlds/: death_valley_satellite.sdf  death_valley_terrain.sdf
satellite_data/: .gitkeep
scripts/: Start-Simulation.ps1  auto_connect_qgc.ps1  build_all.sh  build_packages.sh  calibrate_camera.sh  check_px4_ready.py  configure_airframe_sensors.py  configure_qgc_autoconnect.ps1  configure_qgc_autoconnect.sh  convert_euroc_to_rosbag.py  create_test_satellite_data.py  deploy_orin.sh  download_satellite_imagery.py  download_terrain_dem.py  download_test_datasets.py  fix_ekf_origin_startup.py  force_vehicle_position.py  inject_sensor_data.py  mavlink_bridge.py  monitor_px4_build.ps1  prepare_satellite_data.py  px4_with_mavproxy.sh  run_px4_sitl.ps1  run_simulation.sh  set_home_position.py  set_vehicle_position.py  setup_windows.ps1  setup_wsl.ps1  start_death_valley_sim.ps1  start_flightgear.ps1  start_mavproxy.sh  start_simulation.ps1  start_simulation.sh  start_simulation_flightgear.sh  start_simulation_gazebo_headless.sh  start_simulation_jmavsim.sh  start_simulation_simple.sh  start_simulation_with_sensors.sh  test_full_system.py  test_mavlink_internal.py  (+6 more)
src/: .gitkeep
src/proxigo_bringup/: CMakeLists.txt  package.xml
src/proxigo_bringup/config/: simulation.yaml
src/proxigo_bringup/launch/: full_system.launch.py  hardware.launch.py  simulation.launch.py
src/satellite_matching/: package.xml  setup.py
src/satellite_matching/launch/: satellite_matching.launch.py
src/satellite_matching/satellite_matching/: __init__.py  region_manager_node.py  satellite_matcher_node.py
src/state_fusion/: package.xml  setup.py
src/state_fusion/launch/: state_fusion.launch.py
src/state_fusion/state_fusion/: __init__.py  fusion_node.py  mavros_bridge_node.py
test_data/: .gitkeep
(+46 files in other folders)
