<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proxigo_bringup</name>
  <version>0.1.0</version>
  <description>Proxigo Scalence - Main bringup package with launch files</description>
  <maintainer email="dev@proxigo.io">Proxigo Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>vio_bridge</exec_depend>
  <exec_depend>satellite_matching</exec_depend>
  <exec_depend>state_fusion</exec_depend>
  <exec_depend>mavros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
